@@ -24,7 +24,6 @@ import org.apache.kafka.timeline.SnapshotRegistry;
 import org.apache.kafka.timeline.TimelineHashMap;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.Iterator;
 import java.util.Map;
 import java.util.Map.Entry;
@@ -270,7 +269,7 @@ public class BrokersToIsrs {
     PartitionsOnReplicaIterator iterator(int brokerId, boolean leadersOnly) {
         Map<Uuid, int[]> topicMap = isrMembers.get(brokerId);
         if (topicMap == null) {
-            topicMap = Collections.emptyMap();
+            topicMap = Map.of();
         }
         return new PartitionsOnReplicaIterator(topicMap, leadersOnly);
     }
