@@ -26,9 +26,9 @@ import org.apache.kafka.common.metadata.PartitionRecord;
 import org.apache.kafka.metadata.PartitionRegistration;
 import org.apache.kafka.metadata.Replicas;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Set;
@@ -104,8 +104,8 @@ public final class TopicDelta {
                 new PartitionChangeRecord().
                     setPartitionId(partitionId).
                     setTopicId(image.id()).
-                    setEligibleLeaderReplicas(Collections.emptyList()).
-                    setLastKnownElr(Collections.emptyList())
+                    setEligibleLeaderReplicas(List.of()).
+                    setLastKnownElr(List.of())
             ));
         }
     }
