@@ -39,7 +39,6 @@ import org.slf4j.LoggerFactory;
 
 import java.io.File;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 import java.util.OptionalInt;
@@ -162,7 +161,7 @@ public final class SnapshotFileReader implements AutoCloseable {
         }
         listener.handleCommit(
             MemoryBatchReader.of(
-                Collections.singletonList(
+                List.of(
                     Batch.data(
                         batch.baseOffset(),
                         batch.partitionLeaderEpoch(),
