@@ -48,7 +48,6 @@ import org.slf4j.LoggerFactory;
 
 import java.util.AbstractMap.SimpleImmutableEntry;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.IdentityHashMap;
 import java.util.Iterator;
@@ -522,7 +521,7 @@ public final class LocalLogManager implements RaftClient<ApiMessageAndVersion>, 
 
                             listenerData.handleCommit(
                                 MemoryBatchReader.of(
-                                    Collections.singletonList(
+                                    List.of(
                                         Batch.data(
                                             entryOffset - batch.records.size() + 1,
                                             batch.leaderEpoch,
@@ -759,7 +758,7 @@ public final class LocalLogManager implements RaftClient<ApiMessageAndVersion>, 
     public List<RaftClient.Listener<ApiMessageAndVersion>> listeners() {
         final CompletableFuture<List<RaftClient.Listener<ApiMessageAndVersion>>> future = new CompletableFuture<>();
         eventQueue.append(() ->
-            future.complete(listeners.values().stream().map(l -> l.listener).collect(Collectors.toList()))
+            future.complete(listeners.values().stream().map(l -> l.listener).toList())
         );
         try {
             return future.get();
